fix: images in the mitivation section are stretched to the full width of the mobile screen

--- a/src/assets/scss/pages/about/adaptive/_motivation.scss
+++ b/src/assets/scss/pages/about/adaptive/_motivation.scss
@@ -53,8 +53,8 @@
 	}
 
 	.motivation__image {
-		max-width: 320px;
-		min-height: 134px;
+		max-width: 100%;
+		min-height: 27vh;
 	}
 
 	.motivation__list,
